--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "C:/Users/koxa1/developer/developers/vue-rickandmorty/deploy.sh"
   },
   "dependencies": {
     "autoprefixer": "10.4.5",
