--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-fullpage.js": "^0.2.3",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -42,7 +43,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
